fix icon spacing

--- a/views/About.module.css
+++ b/views/About.module.css
@@ -196,7 +196,7 @@
 	margin-left: 80px;
 }
 .iconblockodd {
-	margin: 0 15px 15px 15px;
+	margin: 15px;
 }
 .iconposition {
 	display: flex;
